--- a/.github/workflows/main_mycrudapp.yml
+++ b/.github/workflows/main_mycrudapp.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - MyCrudApp
+name: Build and deploy fullstack Node.js app to Azure Web App - MyCrudApp
 
 on:
   push:
@@ -13,41 +10,58 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # required for checkout
 
     steps:
+      # 1️⃣ Checkout the repository
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      # 2️⃣ Set up Node.js (same as before)
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      # 3️⃣ Build the frontend
+      - name: Build frontend
+        working-directory: ./frontend
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
+      # 4️⃣ Copy the built frontend files to backend/dist
+      - name: Move frontend build to backend/dist
+        run: |
+          mkdir -p backend/dist
+          cp -r frontend/dist/* backend/dist/
+
+      # 5️⃣ Install backend dependencies
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm install
+
+      # 6️⃣ Upload the backend folder (with frontend included) for deployment
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./backend
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
+      # 7️⃣ Download the artifact from the build job
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
+      # 8️⃣ Log in to Azure
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +69,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C1D978E65F01409485E1DA17F5C7F560 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_089E214838A1432D93FDCD18B9BE85BB }}
 
-      - name: 'Deploy to Azure Web App'
+      # 9️⃣ Deploy only the backend (which now contains frontend build)
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'MyCrudApp'
           slot-name: 'Production'
-          package: .
-          
+          package: ./backend
