Refactor GitHub Actions workflow for MyCrudApp
Updated the workflow to improve clarity and fix paths for deployment.

--- a/.github/workflows/main_mycrudapp.yml
+++ b/.github/workflows/main_mycrudapp.yml
@@ -13,39 +13,37 @@ jobs:
       contents: read
 
     steps:
-      # 1️⃣ Checkout code
       - uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      # 3️⃣ Build Frontend
+      # 🏗️ Build frontend
       - name: Build Frontend
-        working-directory: ./Frontend   # ✅ matches your repo
+        working-directory: ./Frontend
         run: |
           npm install
           npm run build
 
-      # 4️⃣ Move Frontend build into Server/dist
+      # 📦 Copy frontend build into backend folder
       - name: Move frontend build to Server/dist
         run: |
           mkdir -p Server/dist
           cp -r Frontend/dist/* Server/dist/
 
-      # 5️⃣ Install Server dependencies
+      # 🧩 Install backend dependencies
       - name: Install Server dependencies
-        working-directory: ./Server    # ✅ changed from Backend → Server
+        working-directory: ./Server
         run: npm install
 
-      # 6️⃣ Upload artifact (Server only)
+      # 📤 Upload artifact for deploy
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./Server               # ✅ updated
+          path: ./Server
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,13 +53,11 @@ jobs:
       contents: read
 
     steps:
-      # 7️⃣ Download artifact from build
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      # 8️⃣ Login to Azure
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -69,11 +65,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C1D978E65F01409485E1DA17F5C7F560 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_089E214838A1432D93FDCD18B9BE85BB }}
 
-      # 9️⃣ Deploy to Azure Web App
+      # 🚀 Deploy the downloaded artifact
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'MyCrudApp'
           slot-name: 'Production'
-          package: ./Server             # ✅ updated to Server
+          package: ./node-app     # ✅ fixed path
