--- a/.github/workflows/main_mycrudapp.yml
+++ b/.github/workflows/main_mycrudapp.yml
@@ -45,7 +45,7 @@ jobs:
           name: node-app
           path: ./Server
 
-  deploy:
+  deploy:   # ✅ <— moved back under “jobs”, indented properly
     runs-on: ubuntu-latest
     needs: build
     permissions:
@@ -57,6 +57,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: ./Server  # ✅ Explicitly extract into ./Server
+
+      - name: Verify artifact contents
+        run: ls -R ./Server  # ✅ Debug: shows what was downloaded
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -65,11 +69,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C1D978E65F01409485E1DA17F5C7F560 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_089E214838A1432D93FDCD18B9BE85BB }}
 
-      # 🚀 Deploy the downloaded artifact
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'MyCrudApp'
           slot-name: 'Production'
-          package: ./node-app     # ✅ fixed path
+          package: ./Server   # ✅ Correct folder that now contains your code
