--- a/.github/workflows/main_crudapp12.yml
+++ b/.github/workflows/main_crudapp12.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - CrudApp12
+name: Build and deploy fullstack Node.js app to Azure Web App - CrudApp12
 
 on:
   push:
@@ -13,57 +10,66 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      # 🏗️ Build Frontend
+      - name: Build Frontend
+        working-directory: ./Frontend
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
+      # 📦 Copy frontend build into backend folder
+      - name: Copy Frontend Build to Server/dist
+        run: |
+          mkdir -p Server/dist
+          cp -r Frontend/dist/* Server/dist/
+
+      # 🧩 Install backend dependencies
+      - name: Install Server dependencies
+        working-directory: ./Server
+        run: npm install
+
+      # 📤 Upload built app for deployment
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./Server
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+          path: ./Server
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D9E514280B8744A9BBE6E40EE290CEE1 }}
-           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5D9368A4BA224D85B554C9F1C4AD73F6 }}
-           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_55B944FB2E1D47B09C4C8A112B8206CA }}
+          auth-type: SERVICE_PRINCIPAL
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D9E514280B8744A9BBE6E40EE290CEE1 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5D9368A4BA224D85B554C9F1C4AD73F6 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_55B944FB2E1D47B09C4C8A112B8206CA }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'CrudApp12'
           slot-name: 'Production'
-          package: .
-
-          
-
-
-
+          package: ./Server
