--- a/.github/workflows/main_crudapp12.yml
+++ b/.github/workflows/main_crudapp12.yml
@@ -1,44 +1,33 @@
-name: Build and deploy fullstack Node.js app to Azure Web App - CrudApp12
+name: Build and deploy Node app to Azure Web App
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '20'
 
-      # 🏗️ Build Frontend
-      - name: Build Frontend
-        working-directory: ./Frontend
+      - name: Install dependencies
         run: |
+          cd Server
+          npm install
+
+      - name: Build frontend (if applicable)
+        run: |
+          cd ../Client
           npm install
           npm run build
 
-      # 📦 Copy frontend build into backend folder
-      - name: Copy Frontend Build to Server/dist
-        run: |
-          mkdir -p Server/dist
-          cp -r Frontend/dist/* Server/dist/
-
-      # 🧩 Install backend dependencies
-      - name: Install Server dependencies
-        working-directory: ./Server
-        run: npm install
-
-      # 📤 Upload built app for deployment
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -48,9 +37,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
+    environment:
+      name: 'Production'
 
     steps:
       - name: Download artifact from build job
@@ -59,17 +47,10 @@ jobs:
           name: node-app
           path: ./Server
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          auth-type: SERVICE_PRINCIPAL
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D9E514280B8744A9BBE6E40EE290CEE1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5D9368A4BA224D85B554C9F1C4AD73F6 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_55B944FB2E1D47B09C4C8A112B8206CA }}
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'CrudApp12'
           slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
           package: ./Server
